qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/videoList/videoList.module.css
.episodeContainer {
  margin: 5px 2.5% 15px 2.5%;
  background-color: #fff;
  border-radius: 5px;
}

.episodeTitle {
  padding: 10px 15px;
  border-radius: 5px 5px 0 0;
  background-color: #60b4df;
  color: #fff;
  text-align: left;
}

.buttonContainer {
  display: flex;
  padding: 10px 25px;
  gap: 10px;
}

.videoButton {
  border: 2px solid #60b4df;
  color: #60b4df;
  background: transparent;
  outline: none;
  cursor: pointer;
  border-radius: 50px;
  padding: 5px 15px;
}

.videoPlayerContainer {
  position: relative;
  max-height: calc(95vw / 16 * 9);
  object-fit: contain;
  border-radius: 5px;
  margin: 10px 2.5vw;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  transition: all 1s ease-in-out;
  overflow: hidden;
}

.videoPlayer {
  width: 100%;
  height: 100%;
  border-radius: 5px;
}

.videoPlayerOverlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: inherit;
  background-color: rgba(255, 255, 255, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.playerHidden {
  max-height: 0;
  margin: 0;
  box-shadow: none;
}

.loadingContainer p {
  color: #000;
  margin-bottom: 30px;
}

